# Messenger

./: .gitignore  CMakeLists.txt  MessengerDB  README.md  documentation.docx
Client/: CMakeLists.txt  authorization.cpp  authorization.h  authorization.ui  chat.cpp  chat.h  chat.ui  client.cpp  client.h  clientsocket.cpp  clientsocket.h  clientui.cpp  clientui.h  conanfile.txt  main.cpp  message.cpp  message.h  registration.cpp  registration.ui  user.ui  userlist.cpp  userlist.h  userlist.ui
Client/inc/: authorization.h  chat.h  client.h  clientsocket.h  clientui.h  config.h  message.h  registration.h  user.h  userlist.h
Client/src/: authorization.cpp  authorization.ui  chat.cpp  chat.ui  client.cpp  clientsocket.cpp  clientui.cpp  clientui.ui  main.cpp  message.cpp  message.ui  registration.cpp  registration.ui  user.cpp  userlist.cpp  userlist.ui
Server/: CMakeLists.txt  MessengerDB  conanfile.txt  main.cpp  server.cpp  server.h  sqlitedb.cpp  sqlitedb.h  user.cpp  user.h
Server/inc/: config.h  server.h  serversocket.h  sqlitedb.h
Server/src/: main.cpp  server.cpp  serversocket.cpp  sqlitedb.cpp
UML/: model  uml
